jellyfin-ffmpeg (5.0.1-7) unstable; urgency=medium

  * Switch to single precision fftw, enable neon for arm.

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 23 Jun 2022 19:19:17 +0800

jellyfin-ffmpeg (5.0.1-6) unstable; urgency=medium

  * Fix using hwupload with hwmap on d3d11va.
  * Fix the unsupported subscripted access on nvidia.
  * Update dependencies.

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 13 Jun 2022 22:50:13 +0800

jellyfin-ffmpeg (5.0.1-5) unstable; urgency=medium

  * Enable chromaprint.
  * Update dependencies.
  * Fix the issue that SPS/PPS are lost on AMD VCN H264 encoder.
  * Add cuda/ocl tonemap support for DoVi profile 5 and 8.

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 26 May 2022 20:13:31 +0800

jellyfin-ffmpeg (5.0.1-4) unstable; urgency=medium

  * Add hevc dovi support for hlsenc.
  * Add Windows long path support.
  * Update dependencies.

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 12 May 2022 17:08:17 +0800

jellyfin-ffmpeg (5.0.1-3) unstable; urgency=medium

  * Bump version to reflect the deb name has been changed to jellyfin-ffmpeg5.

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 6 May 2022 21:45:03 +0800

jellyfin-ffmpeg (5.0.1-2) unstable; urgency=medium

  * Hotfix for shaderc loading issue on buster

 -- nyanmisaka <nst799610810@gmail.com>  Wed, 4 May 2022 08:22:17 +0800

jellyfin-ffmpeg (5.0.1-1) unstable; urgency=medium

  * New upstream version 5.0.1

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 28 Apr 2022 18:37:31 +0800

jellyfin-ffmpeg (4.4.1-4) unstable; urgency=medium

  * Update dependencies (#120)
  * Update dav1d to 1.0.0 (#118)
  * fix libass AR and blur issue (#119)

 -- Joshua Boniface <joshua@boniface.me>  Wed, 23 Mar 2022 01:02:21 -0500
 
jellyfin-ffmpeg (4.4.1-3) unstable; urgency=medium

  * Allow configuration of used driver via ENV variable (#101)
  * Add oneVPL runtime for QSV on 12th Gen Intel processors (#103)
  * Add fixes for corrupted hevc-vaapi on TGL (#104)