@@ -1,6 +1,7 @@
 jellyfin-ffmpeg (5.0.1-7) unstable; urgency=medium
 
   * Switch to single precision fftw, enable neon for arm.
+  * Fix the incorrect full to limit color range on DoVi tonemap.
 
  -- nyanmisaka <nst799610810@gmail.com>  Thu, 23 Jun 2022 19:19:17 +0800
 
